--- a/src/phonebook_frontend/assets/main.css
+++ b/src/phonebook_frontend/assets/main.css
@@ -3,35 +3,116 @@ body {
     font-size: 1.5rem;
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
+input[type=text],
+input[type=number],
+textarea {
+    width: 100%;
+    /* Full width */
+    padding: 12px;
+    /* Some padding */
+    border: 1px solid #ccc;
+    /* Gray border */
+    border-radius: 4px;
+    /* Rounded borders */
+    box-sizing: border-box;
+    /* Make sure that padding and width stays in place */
+    margin-top: 6px;
+    /* Add a top margin */
+    margin-bottom: 16px;
+    /* Bottom margin */
+    resize: vertical
+        /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
-form {
-    display: flex;
-    justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
+button[type=submit] {
+    background-color: #04AA6D;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
+/* When moving the mouse over the submit button, add a darker green color */
+button[type=submit]:hover {
+    background-color: #45a049;
 }
 
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
 
-#greeting:empty {
-    display: none;
+
+/* new css */
+
+.panel {
+    width: 80%;
+    margin: 50px auto;
+}
+
+td:nth-of-type(1) {
+    width: 30%;
+}
+
+td:nth-of-type(2) {
+    width: 35%;
+}
+
+input[type="text"] {
+    width: 100%;
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .form-inline .form-control {
+        width: 150px;
+    }
+}
+
+
+/* Search field CSS */
+.panel-body,
+.panel-footer {
+    border: 1px solid black;
+    padding: 2rem;
+    margin-bottom: 2rem;
+}
+
+button:disabled,
+button[disabled] {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
+}
+
+
+
+/* table css */
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
 }
